--- a/src/main/resources/templates/product/create.html
+++ b/src/main/resources/templates/product/create.html
@@ -34,5 +34,14 @@
 
 </form>
 
+<script src="//static.filestackapi.com/filestack-js/3.x.x/filestack.min.js"></script>
+<script th:inline="javascript">
+    /*<![CDATA[*/
+
+    var apiKey = [[${apiKey}]];
+    alert(message);
+
+    /*]]>*/
+</script>
 </body>
 </html>
