--- a/src/main/resources/templates/product/create.html
+++ b/src/main/resources/templates/product/create.html
@@ -8,39 +8,62 @@
 
 <h1>Create Product</h1>
 
-<form th:action="@{/product/create}" th:method="POST">
+<form th:action="@{/product/create}" th:method="POST" th:object="${product}">
 
     <label for="name">Product Name</label>
-    <input type="text" id="name" name="product_name" >
+    <input type="text" id="name" th:field="*{name}" >
 
     <br>
 
     <label for="price">Price</label>
-    <input type="number" id="price" name="product_price">
+    <input type="number" id="price" th:field="*{price}">
 
     <br>
 
     <label for="description">Description</label>
-    <input type="text" id="description" name="product_description">
+    <input type="text" id="description" th:field="*{description}">
 
     <br>
 
-    <label for="image">Image</label>
-    <input type="text" id="image" name="product_image_url">
+    <label for="upload"></label>
+    <button type="button" id="upload" name="upload">Upload an image</button>
 
     <br>
-
+    <input id="stashFilestackURL" name="stashFilestackURL" value="replaceme" th:field="*{img}" type="hidden">
     <input type="submit" value="Create Product">
 
 </form>
 
+
+<script
+        src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+        crossorigin="anonymous"></script>
+
 <script src="//static.filestackapi.com/filestack-js/3.x.x/filestack.min.js"></script>
+
 <script th:inline="javascript">
     /*<![CDATA[*/
-
     var apiKey = [[${apiKey}]];
-    alert(message);
+    // alert("Your api key is " + apiKey);
+    const options = {
+        // onUploadDone:
+        //     function (res){
+        // console.log(res.filesUploaded[0].url);
+        //     alert("Log fired");
+        // }
 
+        onUploadDone:
+            function(res) {
+            $("#stashFilestackURL").val(res.filesUploaded[0].url);
+            }
+        }
+
+    const client = filestack.init(apiKey);
+
+    $("#upload").click(function () {
+        client.picker(options).open()
+    });
     /*]]>*/
 </script>
 </body>
