--- a/src/main/resources/templates/product/create.html
+++ b/src/main/resources/templates/product/create.html
@@ -50,7 +50,7 @@
         // onUploadDone:
         //     function (res){
         // console.log(res.filesUploaded[0].url);
-        //     alert("Log fired");
+        //     alert("Log fired " + res.filesUploaded[0].url);
         // }
 
         onUploadDone:
