--- a/src/main/resources/templates/product/impossible.html
+++ b/src/main/resources/templates/product/impossible.html
@@ -11,7 +11,7 @@
 <script src="//static.filestackapi.com/filestack-js/3.x.x/filestack.min.js"></script>
 <script th:inline="javascript">
     var apiKey = [[${apiKey}]];
-    // alert("Your api key is " + apiKey);
+    // alert("Your api key is " + apiKey); //just an alert to make sure it's connected.
 
     const client = filestack.init(apiKey);
     client.picker().open();
